Correct the vertical alignment of the networth and total xp graphs.

--- a/website/static/css/index.css
+++ b/website/static/css/index.css
@@ -329,6 +329,7 @@ header > hr {
     width: 91%;
     height: 70%;
     display: inline-block;
+    vertical-align: middle;
 }
 
 #radiant .label {
